css/stylePhoto.css
:root {
    --transition: all 1s cubic-bezier(.3, 0, .05, .99);
}

* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    list-style: none;
    text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
p,
li {
    color: white;
}

::-webkit-scrollbar {
    display: none;
}


::-moz-selection {
    color: white;
    background: black;
}

::selection {
    color: white;
    background: black;
}

html,
body {
    height: 100%;
    margin: 0;
    user-select: none;
}

img {
    user-select: none;
    /* Prevents image selection */
    -webkit-user-drag: none;
    /* Prevents dragging in WebKit browsers */
}

html {
    background-color: black;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index: 9999;
    pointer-events: none;
    opacity: 1;
}

/* nav */
.navbar {
    display: flex;
    color: white;
    justify-content: space-between;
    align-items: top;
    padding: 18px 0;
    column-gap: 1rem;
    z-index: 80;
    margin: 0 2rem;
    margin-bottom: 3rem;
}

.navbar h1 {
    font-family: "SUSE", sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 1.2rem;
}

.navbar h2 {
    font-family: "SUSE", sans-serif;
    font-weight: 300;
    font-style: normal;
    font-size: 1.1rem;
}

.gohome {
    cursor: pointer;
    font-size: 1.2rem;
    transition: var(--transition);
}

.gohome:hover {
    letter-spacing: 5px;
}

@media (max-width: 700px) {

    .nav-world,
    .nav-library {
        display: none;
        /* Hide the elements */
    }
}


/* header */

.logo-main {
    position: absolute;
    margin-top: 20px;
    margin-left: 20px;
    width: 40px;
}

.header {
    width: 95%;
    height: 80%;
    margin-left: auto;
    margin-right: auto;
    align-items: center;
    justify-content: center;
    position: relative;
    margin-bottom: 10vw;
    background-image: url('https://lh3.googleusercontent.com/d/1X1KuQQgpeMbHXnjJYWrT97ZtTAvGX-03=s1000');
    background-size: 75%;
    background-position: bottom left;
    background-repeat: no-repeat;
}

.header h1 {
    font-family: "Gilda Display", serif;
    font-size: 10rem;
    font-weight: 400;
    margin-left: auto;
    width: max-content;
}

.main-header {
    padding-top: 0rem;
}


@media (max-width: 952px) {
    .header {
        background-size: 95%;

    }

    .header h1 {
        font-size: 5rem;
    }
}

@media (max-width: 512px) {
    .header {
        background-position: bottom center;
    }

    .header h1 {
        font-size: 3rem;
        margin-right: auto;
    }

    .main-header {
        padding-top: 10rem;
    }
}

.textbox {
    margin-top: auto;
    margin-left: auto;
    margin-bottom: -40px;
    font-family: "Gilda Display", serif;
}


.container-first {
    position: relative;
    height: max-content;
    padding: 20px;
    /* Ensure some padding around the content */
}

.container {
    position: relative;
    width: 100%;
}

.image-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
    /* Gap between rows */
}

.row {
    display: flex;
    justify-content: space-between;
    gap: 20px;
    /* Gap between images */
}

.row img {
    width: 100%;
    /* Ensures images scale responsively */
    height: auto;
    /* Maintain aspect ratio */
    object-fit: cover;
    /* Ensures images are not stretched */
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    cursor: pointer;
}

.row-1 img {
    flex: 1 1 calc(33.33% - 20px);
    height: clamp(200px, 30vw, 900px);
}

.row-2 img {
    flex: 1 1 calc(50% - 20px);
    height: clamp(250px, 25vw, 450px);
}

.row-3 img {
    flex: 1 1 calc(33.33% - 20px);
    height: clamp(200px, 30vw, 900px);
}

.row-4 img {
    flex: 1 1 calc(25% - 20px);
    height: clamp(180px, 30vw, 580px);
}

.row-5 img {
    flex: 1 1 calc(50% - 20px);
    height: clamp(250px, 25vw, 450px);
}

.row-6 img {
    flex: 1 1 calc(33.33% - 20px);
    height: clamp(200px, 30vw, 900px);
}

.row-7 img {
    flex: 1 1 calc(50% - 20px);
    height: clamp(250px, 25vw, 450px);
}

.row-8 img {
    flex: 1 1 calc(33.33% - 20px);
    height: clamp(200px, 30vw, 900px);
}

.row-8 img:nth-child(2) {
    flex: 1 1 calc(63% - 20px);
}

.row-9 img {
    flex: 1 1 calc(33.33% - 20px);
    height: clamp(200px, 30vw, 900px);
}


@media (max-width: 810px) {
    .row img {
        flex: 1 1 calc(50% - 10px);
        height: clamp(150px, 18vw, 300px);
    }
}

@media (max-width: 512px) {
    .row img {
        flex: 1 1 calc(100% - 10px);
        height: clamp(100px, 25vw, 200px);
    }
}

@media (max-width: 385px) {
    .row img {
        flex: 1 1 calc(100% - 10px);
        height: clamp(50px, 26vw, 100px);
    }
}


.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0;
    pointer-events: none;
    transition: var(--transition);
}

.modal-image-class {
    opacity: 1;
}
  

.modal-content {
    transform: translateY(1500px);
    opacity: 0;
    transition: var(--transition);
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
}

.modal-content h1{
    font-family: "Tomorrow", serif;
    font-style: normal;
    font-size: 3rem;
    margin: 4rem;
    cursor: pointer;
    z-index: 999;
    pointer-events: all;
    transition: var(--transition);
}

.modal-content img {
    max-width: 90%;
    max-height: 90%;
    border-radius: 10px;
    cursor: default;
    pointer-events: all;
}

.open-modal {
    opacity: 1;
    pointer-events: all;
}

.open-content {
    opacity: 1 !important;
    transform: translateY(0px) !important;
}

.end-footer {
    font-family: "Gilda Display", serif;
    width: 100vw;
    height: 10vh;
    margin-left: auto;
    margin-right: auto;
    font-weight: 100;
    width: max-content;
}

.end-footer h1 {
    margin-left: auto;
    margin-right: auto;
    width: max-content;
}

.second-footer {
    font-size: 1rem;
    justify-content: center;
    align-items: center;
}

